--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,3 @@
-<h1> Hello </h1>
+<h1> Welcome to the Finance Tracker Application</h1>
+
+<%= button_to 'Sign out', destroy_user_session_path, method: :delete, class: 'btn btn-link p-0', form: { "data-turbo-confirm": "Sign out?" } %>
