Frontend & Backend working

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -9,6 +9,15 @@
     padding-left: 0 !important;
 }
 
-.result-block{
+.results-block{
     display: inline-block;
+    margin-bottom: 1rem;
+}
+
+.logout-btn{
+    margin-right: 5px;
+}
+
+.add-btn{
+    margin-left: 7px;
 }
