--- a/app/views/users/my_portfolio.html.erb
+++ b/app/views/users/my_portfolio.html.erb
@@ -2,7 +2,7 @@
 
 <div class="search-area">
     <h3> Search Stocks </h3>
-    <%= form_tag search_stock_path, method: :get do%>
+    <%= form_tag search_stock_path, method: :get, remote: true do %>
         <div class="form-group row">
             <div class="col-sm-9 no-right-padding">
                 <%= text_field_tag :stock, params[:stock], placeholder: "Stock ticker symbol", autofocus: true, class: "form-control form-control-lg" %>
@@ -15,14 +15,13 @@
         </div>
     <% end %>
 </div>
-<% if @stock %>
-    <div class="card card-header result-block">
-        <strong> Symbol: </strong> <%= @stock.ticker %>
-        <strong> Name: </strong> <%= @stock.name %>
-        <strong> Last Price: </strong> <%= @stock.last_price %>
-    </div>
-<% end %>
 
-<% if !@tracked_stocks.empty? %>
-    <%= render 'stocks/list' %>
-<% end %>
+<div id="results">
+
+</div>
+
+
+<% @tracked_stocks ||= [] %>
+<div id="tracked-stocks">
+  <%= render 'stocks/list', stocks: @tracked_stocks if @tracked_stocks.present? %>
+</div>
