--- a/app/views/stocks/_stock.html.erb
+++ b/app/views/stocks/_stock.html.erb
@@ -4,11 +4,26 @@
 
 
 <% if defined?(@stock) && @stock.present? %>
-    <div class="card card-header results-block">
+    <div class="card results-block">
+      <div class="card-body">
       <strong> Symbol: </strong> <%= @stock.ticker %>
       <strong> Name: </strong> <%= @stock.name %>
       <strong> Price: </strong> <%= number_to_currency(@stock.last_price) %>
+      <% if current_user.can_track_stock?(@stock.ticker)%>
+        <%= link_to 'Add to portfolio', user_stocks_path(user: current_user, ticker: @stock.ticker),
+                                      class: "btn btn-sm btn-success", method: :post %> 
+      <% else %>
+        <span class="badge badge-secondary">
+          You are already tracking
+          <% unless current_user.under_stock_limit? %>
+            10 stocks
+          <% end %>
+          <% if current_user.stock_already_tracked?(@stock.ticker) %>
+            this stock
+          <% end %>
+        </span>
+      <% end %>
+
     </div>
-<% else %>
-  <%# nothing to render (flash already set in controller) %>
+</div>
 <% end %>
