--- a/app/views/stocks/_list.html.erb
+++ b/app/views/stocks/_list.html.erb
@@ -1,24 +1,46 @@
 <div class="row">
-    <div class="col-9">
-        <table class="table table-bordered table-hover">
-            <thead>
-            <tr>
-                <th scope="col"> Ticker </th>
-                <th scope="col"> Name </th>
-                <th scope="col"> Price</th>
-                <th scope="col"> Action </th>
-            </tr>
-            </thead>
-            <tbody>
-            <% @tracked_stocks.each do |stock| %>
-            <tr>
-                <th scope="row"> <%= stock.ticker %></th>
-                <td><%= stock.name %></td>
-                <td> <%= stock.last_price %> </td>
-                <td>'Action Placeholder' </td>
-            </tr>
-            <% end %>
-            </tbody>
-        </table>
-    </div>
+  <div class="col-9">  
+    <table class="table table-bordered table-hover">
+      <thead>
+        <tr>
+          <th scope="col">Ticker</th>
+          <th scope="col">Name</th>
+          <th scope="col">Price</th>
+          <th scope="col">Actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @tracked_stocks.each do |stock| %>
+          <tr>
+            <th scope="row"><%= stock.ticker %></th>
+            <td><%= stock.name %></td>
+            <td><%= stock.last_price %></td>
+            <td><% if current_user.can_track_stock?(stock.ticker) %>
+                <%= button_to 'Add to portfolio',
+                              user_stocks_path(ticker: stock.ticker),
+                              class: "btn btn-sm btn-success" %>
+                <% elsif @user.present? && current_user.id != @user.id %>
+                  <span class="badge badge-secondary">
+                    You are already tracking
+                    <% if !current_user.under_stock_limit? %>
+                      10 stocks
+                    <% end %>
+                    <% if current_user.stock_already_tracked?(stock.ticker) %>
+                      this stock
+                    <% end %>
+                  </span>
+                <% end %>
+              <% if @user.nil? || current_user.id == @user.id %>
+                <%= button_to 'Remove',
+                              user_stock_path(stock),
+                              method: :delete,
+                              data: { confirm: 'Are you sure?' },
+                              class: "btn btn-sm btn-warning" %>
+              <% end %>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
 </div>
