--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -11,26 +11,23 @@
           <li class="nav-item <% 'active' if request.path == my_portfolio_path%>">
             <%= link_to 'My Portfolio', my_portfolio_path, class: "nav-link" %>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
-              Dropdown
+              Profile
             </a>
             <div class="dropdown-menu">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Something else here</a>
+              <%= link_to edit_user_registration_path, class: 'dropdown-item' do %>
+                <%= fa_icon 'edit' %> Edit profile
+              <% end %>
             </div>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled">Disabled</a>
           </li>
         </ul>
         
         <ul class='navbar-nav ml-auto'>
+          <li class='nav-item user-name'>
+            <%= fa_icon 'user' %>
+            <%= current_user.full_name %>
+          </li>
             <li class='nav-item'>
                 <%= link_to("Logout", destroy_user_session_path,
                     class: "btn btn-xs btn-danger logout-btn", method: :delete)%>
