--- a/app/views/users/my_friends.html.erb
+++ b/app/views/users/my_friends.html.erb
@@ -19,8 +19,10 @@
   <% end %>
 </div>
 
-<div id="friend-results"> 
-
+<div class="row">
+    <div class="col-9">  
+        <div id="friend-results"> </div>
+    </div>
 </div>
 
 <% if !@friends.empty? %>
